Adds behat tests, fixes jwt issues.

--- a/src/Resources/translations/messages.en.yml
+++ b/src/Resources/translations/messages.en.yml
@@ -24,3 +24,4 @@ entity:
 pair:
     errors:
         must_not_be_equal: Base currency and target currency must be different
+        value_must_be_greater_zero: Value must be greater than zero
